<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount" />

    <EditText
        android:id="@+id/editInputAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="1234567890"
        android:inputType="phone" />

    <TextView
        android:id="@+id/textNumPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/numPax" />

    <EditText
        android:id="@+id/editInputNumPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/tbSvs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/svsDisabled"
            android:textOn="@string/svsEnabled" />

        <ToggleButton
            android:id="@+id/tbGst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/gstDisabled"
            android:textOn="@string/gstEnabled" />

    </LinearLayout>

    <TextView
        android:id="@+id/textDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discount" />

    <EditText
        android:id="@+id/editInputDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RadioButton
            android:id="@+id/radioButtonPaynow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paynow" />

        <RadioButton
            android:id="@+id/radioButtonCash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cash" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/split"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/split" />

        <Button
            android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/reset" />
    </LinearLayout>

    <TextView
        android:id="@+id/textTotalBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/totalbill" />

    <TextView
        android:id="@+id/textEachPays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eachpays" />

</LinearLayout>